fixed review comments